tests/snapshots/yaml_suite_snapshots__yaml_suite_7W2P_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Block Mapping with Missing Values
  from: NimYAML tests
  tags: explicit-key mapping
  yaml: "? a\n? b\nc:\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n   =VAL :\n   =VAL :b\n   =VAL :\n   =VAL :c\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": null,\n  \"b\": null,\n  \"c\": null\n}\n"
  dump: "a:\nb:\nc:\n"
