tests/snapshots/yaml_suite_snapshots__yaml_suite_7W2P_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "a:\nb:\nc:\n"
  from: NimYAML tests
  json: "{\n  \"a\": null,\n  \"b\": null,\n  \"c\": null\n}\n"
  name: Block Mapping with Missing Values
  tags: explicit-key mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n   =VAL :\n   =VAL :b\n   =VAL :\n   =VAL :c\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  yaml: "? a\n? b\nc:\n"
