tests/snapshots/yaml_suite_snapshots__yaml_suite_7Z25_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Bare document after document end marker
  from: "@perlpunk"
  tags: footer
  yaml: "---\nscalar1\n...\nkey: value\n"
  tree: "+STR\n +DOC ---\n  =VAL :scalar1\n -DOC ...\n +DOC\n  +MAP\n   =VAL :key\n   =VAL :value\n  -MAP\n -DOC\n-STR\n"
  json: "\"scalar1\"\n{\n  \"key\": \"value\"\n}\n"
  dump: "--- scalar1\n...\nkey: value\n"
