tests/snapshots/yaml_suite_snapshots__yaml_suite_7ZZ5_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Empty flow collections
  from: "@perlpunk"
  tags: flow mapping sequence
  yaml: "---\nnested sequences:\n- - - []\n- - - {}\nkey1: []\nkey2: {}\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :nested sequences\n   +SEQ\n    +SEQ\n     +SEQ\n      +SEQ []\n      -SEQ\n     -SEQ\n    -SEQ\n    +SEQ\n     +SEQ\n      +MAP {}\n      -MAP\n     …"
  json: "{\n  \"nested sequences\": [\n    [\n      [\n        []\n      ]\n    ],\n    [\n      [\n        {}\n      ]\n    ]\n  ],\n  \"key1\": [],\n  \"key2\": {}\n}\n"
  dump: "---\nnested sequences:\n- - - []\n- - - {}\nkey1: []\nkey2: {}\n"
