tests/snapshots/yaml_suite_snapshots__yaml_suite_7ZZ5_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\nnested sequences:\n- - - []\n- - - {}\nkey1: []\nkey2: {}\n"
  from: "@perlpunk"
  json: "{\n  \"nested sequences\": [\n    [\n      [\n        []\n      ]\n    ],\n    [\n      [\n        {}\n      ]\n    ]\n  ],\n  \"key1\": [],\n  \"key2\": {}\n}\n"
  name: Empty flow collections
  tags: flow mapping sequence
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :nested sequences\n   +SEQ\n    +SEQ\n     +SEQ\n      +SEQ []\n      -SEQ\n     -SEQ\n    -SEQ\n    +SEQ\n     +SEQ\n      +MAP {}\n      -MAP\n     -SEQ\n    -SEQ\n   -SEQ\n   =VAL :key1\n   +SEQ []\n   -SEQ\n   =VAL :key2\n   +MAP {}\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\nnested sequences:\n- - - []\n- - - {}\nkey1: []\nkey2: {}\n"
